--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,45 +1,72 @@
 /* How to use flex?
 Dr Hamdani University of Tissemsilt */
-body {
-  margin: 0 0 2px 0px;
-}
-
-.page {
+body h1,
+h2,
+h3,
+h4,
+h5 {
   display: flex;
-  justify-content: space-between;
-  gap: 1em;
-  margin: 0.2em;
 }
-
-.artcl {
-  order: 2;
-  width: 70%;
-}
-
-.artcl .headerArtcl {
-  background-color: rgba(6, 29, 233, 0.884);
+.headerPage {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  justify-items: center;
+  align-items: center;
+  justify-items: center;
   text-align: center;
+  background-color: rgb(200, 250, 250);
+}
+.headerPage img {
+  width: 100px;
 }
 
-.artcl p {
-  text-indent: 10px;
+.navBar {
+  display: flex;
+  justify-content: space-evenly;
+  height: 40px;
+  background-color: #5957f1;
+  align-items: center;
+}
+.navBar a {
+  text-decoration: none;
+  color: white;
+  font-size: large;
+}
+
+.grid-page {
+  display: grid;
+  grid-template-columns: 1fr 3fr 50px;
+  justify-items: stretch;
+}
+.content {
+  background-color: #f2f7f7;
   text-align: justify;
+  padding: 10px;
+  line-height: 1.3;
+}
+.content p {
+  text-indent: 10px;
+}
+.leftBar {
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  background-color: #4d5efa52;
+  line-height: 2;
+}
+
+.rightBar {
+  display: flex;
+  padding-top: 5em;
+  justify-content: start;
+  align-items: center;
+  color: red;
+  text-orientation: vertical-lr;
+  writing-mode: vertical-rl;
+  text-orientation: upright;
 }
 
 .footer {
-  display: flex;
-  flex-flow: row wrap;
-
-  gap: 0.2em;
-}
-
-.footer-ftr1 {
-  width: 20%;
-  background-color: rgb(231, 250, 234);
-}
-
-.footer-ftr2 {
-  width: 79%;
-  text-align: justify;
-  background-color: rgb(231, 250, 234);
+  background-color: #4d5efa52;
+  height: 60px;
 }
