--- a/CSS/index.css
+++ b/CSS/index.css
@@ -50,6 +50,16 @@ h5 {
 .content p {
   text-indent: 10px;
 }
+
+.content h3 {
+ text-align: center;
+ margin-top: 40px;
+ margin-bottom: 20px;
+ text-transform: uppercase;
+ color: rgb(185, 16, 16);
+ font-weight: bold;
+ text-decoration :underline;
+}
 .leftBar {
   display: flex;
   flex-direction: column;
