--- a/CSS/index.css
+++ b/CSS/index.css
@@ -16,19 +16,31 @@ h5 {
   justify-items: center;
   text-align: center;
   background-color: rgb(200, 250, 250);
+  
   padding: 10px;
 }
 .headerPage img {
   width: 100px;
   height: 100px;
 }
+.titlePage{
+display: flex;
+flex-flow: row wrap;
+justify-content: space-between;
+justify-items: center;
+text-align: center;
+background-color: #5957f1;
+padding: 1em;
+gap: 1em;
 
+}
 .navBar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   height: 40px;
-  background-color: #5957f1;
+ 
   align-items: center;
+  background-color: rgba(252, 63, 63, 0.671) ;
 }
 .navBar a {
   text-decoration: none;
@@ -80,7 +92,8 @@ h5 {
 
 .leftBar h3{
   margin: 0;
-  padding: 0;
+  padding: 5px;
+  
 }
 
 .leftBar .authot{
@@ -108,7 +121,7 @@ h5 {
   background-color: #4d5efa52;
   height: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   line-height: 1.5;
   padding: 10px;
    
@@ -119,7 +132,7 @@ h5 {
 .footer .links{
   display: grid
   ;
-  grid-template-columns: 1fr 1fr ;
+  grid-template-columns: auto auto auto ;
   
    
  
@@ -130,12 +143,15 @@ h5 {
   text-decoration: none;
   grid-column: 2;
   margin-left: 1em;
+  
    
 }
 
 .footer .links h3{
   grid-column: 1;
-  grid-row: 1/4;
-  align-self: start;
-  justify-self: end;
+  grid-row: 1/3;
+ 
+  justify-self: center;
+ align-self: center;
+  color: rgb(165, 42, 42);
 }
