--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,13 +1,13 @@
 /* How to use flex?
 Dr Hamdani University of Tissemsilt */
-body, h1,
+body,
+h1,
 h2,
 h3,
 h4,
 h5 {
   margin: 0;
-  
- }
+}
 .headerPage {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
@@ -16,31 +16,30 @@ h5 {
   justify-items: center;
   text-align: center;
   background-color: rgb(200, 250, 250);
-  
+
   padding: 10px;
 }
 .headerPage img {
   width: 100px;
   height: 100px;
 }
-.titlePage{
-display: flex;
-flex-flow: row wrap;
-justify-content: space-between;
-justify-items: center;
-text-align: center;
-background-color: #5957f1;
-padding: 1em;
-gap: 1em;
-
+.titlePage {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  justify-items: center;
+  text-align: center;
+  background-color: #5957f1;
+  padding: 1em;
+  gap: 1em;
 }
 .navBar {
   display: flex;
   justify-content: space-evenly;
   height: 40px;
- 
+
   align-items: center;
-  background-color: rgba(252, 63, 63, 0.671) ;
+  background-color: rgba(252, 63, 63, 0.671);
 }
 .navBar a {
   text-decoration: none;
@@ -64,13 +63,13 @@ gap: 1em;
 }
 
 .content h3 {
- text-align: center;
- margin-top: 40px;
- margin-bottom: 20px;
- text-transform: uppercase;
- color: rgb(185, 16, 16);
- font-weight: bold;
- text-decoration :underline;
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  color: rgb(185, 16, 16);
+  font-weight: bold;
+  text-decoration: underline;
 }
 .leftBar {
   display: flex;
@@ -80,30 +79,29 @@ gap: 1em;
   line-height: 2;
   gap: 5%;
   padding: 10px;
-  
+  margin: 0;
 }
 
-.leftBar a{
+.leftBar a {
   text-decoration: none;
-  
-  
-   
 }
 
-.leftBar h3{
+.leftBar ul {
+  margin-top: 0;
+}
+
+.leftBar h3 {
   margin: 0;
   padding: 5px;
-  
 }
 
-.leftBar .authot{
+.leftBar .author {
   color: darkblue;
   align-self: center;
   justify-self: end;
-  margin-top: 25px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   text-align: center;
- 
-
 }
 
 .rightBar {
@@ -124,34 +122,24 @@ gap: 1em;
   grid-template-columns: 1fr 1fr 1fr;
   line-height: 1.5;
   padding: 10px;
-   
-   
-  
 }
 
-.footer .links{
-  display: grid
-  ;
-  grid-template-columns: auto auto auto ;
-  
-   
- 
-   
+.footer .links {
+  display: grid;
+  grid-template-columns: auto auto auto;
 }
 
-.footer .links a{
+.footer .links a {
   text-decoration: none;
   grid-column: 2;
   margin-left: 1em;
-  
-   
 }
 
-.footer .links h3{
+.footer .links h3 {
   grid-column: 1;
   grid-row: 1/3;
- 
+
   justify-self: center;
- align-self: center;
+  align-self: center;
   color: rgb(165, 42, 42);
 }
