--- a/CSS/index.css
+++ b/CSS/index.css
@@ -49,7 +49,7 @@ h5 {
 
 .grid-page {
   display: grid;
-  grid-template-columns: 1fr 3fr 50px;
+  grid-template-columns: 1fr 3fr;
   justify-items: stretch;
 }
 .content {
