--- a/CSS/index.css
+++ b/CSS/index.css
@@ -77,7 +77,7 @@ h5 {
   justify-content: start;
   background-color: #4d5efa52;
   line-height: 2;
-  gap: 5%;
+  gap: 15px;
   padding: 10px;
   margin: 0;
 }
